[gd_scene load_steps=9 format=2]

[ext_resource path="res://grafica/Eventos/inimigo_grand/motor.png" type="Texture" id=1]
[ext_resource path="res://grafica/Eventos/inimigo_grand/arma.png" type="Texture" id=2]
[ext_resource path="res://grafica/Eventos/inimigo_grand/Agrupar-61.png" type="Texture" id=3]
[ext_resource path="res://grafica/Eventos/inimigo_grand/Agrupar-111.png" type="Texture" id=4]
[ext_resource path="res://grafica/Eventos/inimigo_grand/piloto.png" type="Texture" id=5]
[ext_resource path="res://script/enemies/striker_enemie.gd" type="Script" id=6]
[ext_resource path="res://grafica/Eventos/inimigo_grand/Efeito_tiro.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.0
height = 60.0

[node name="Move_enemy_controler" type="Area2D"]
position = Vector2( 82, 202 )
script = ExtResource( 6 )
speed = 300
min_distance_to_charge = 300

[node name="Asa_esquerda" type="Node2D" parent="."]
rotation = -1.5708

[node name="Motor" type="Sprite" parent="Asa_esquerda"]
position = Vector2( -26.5, -8 )
texture = ExtResource( 1 )

[node name="base" type="Sprite" parent="Asa_esquerda"]
position = Vector2( -26.5, -8 )
texture = ExtResource( 4 )

[node name="lamina" type="Sprite" parent="Asa_esquerda"]
position = Vector2( -28, 0 )
rotation = -1.00182
texture = ExtResource( 3 )
offset = Vector2( -7.5, 12 )

[node name="Asa_direita" type="Node2D" parent="."]
rotation = -1.5708

[node name="Motor" type="Sprite" parent="Asa_direita"]
position = Vector2( 25.5, -8 )
texture = ExtResource( 1 )
flip_h = true

[node name="base" type="Sprite" parent="Asa_direita"]
position = Vector2( 26.5, -8 )
texture = ExtResource( 4 )
flip_h = true

[node name="lamina" type="Sprite" parent="Asa_direita"]
position = Vector2( 28, -1 )
rotation = 0.994838
texture = ExtResource( 3 )
offset = Vector2( 7.5, 12 )
flip_h = true

[node name="cabine" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 49.7
}

[node name="Position2D" type="Position2D" parent="cabine"]
position = Vector2( 17.9994, -16.5083 )
rotation = -1.57198

[node name="gunE" type="Sprite" parent="cabine"]
position = Vector2( 11, -16 )
rotation = -1.57198
texture = ExtResource( 2 )

[node name="Position2D2" type="Position2D" parent="cabine"]
position = Vector2( 18.5006, 17.4917 )
rotation = -1.57198

[node name="gunD" type="Sprite" parent="cabine"]
position = Vector2( 11.5, 17 )
rotation = -1.57198
texture = ExtResource( 2 )
flip_h = true

[node name="Piloto" type="Sprite" parent="cabine"]
position = Vector2( -0.5, 0 )
rotation = -1.57198
texture = ExtResource( 5 )

[node name="fuego" type="Sprite" parent="cabine/Piloto"]
visible = false
position = Vector2( 1.02795, -23.4988 )
rotation = -3.14159
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="EfeitoTiro" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.482353 )
position = Vector2( 18, -16 )
rotation = -1.5708
texture = ExtResource( 7 )

[node name="EfeitoTiro2" type="Sprite" parent="EfeitoTiro"]
position = Vector2( -34, 0 )
texture = ExtResource( 7 )
